FIX: text not centered when screen too small

--- a/css/main.scss
+++ b/css/main.scss
@@ -163,6 +163,13 @@ footer {
     transition: .3s
 }
 
+@media only screen and (max-width: 567px) {
+
+    body {
+        font-size: .5rem;
+    }
+}
+
 @media only screen and (min-width: 768px) {
 
     body {
